Atualização do layout responsivo

--- a/index.html
+++ b/index.html
@@ -13,19 +13,27 @@
 
   <header>
     <div class="logo"><h1>Pet Gestão</h1></div>
+  
+    <!-- Botão hamburguer -->
+    <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+  
+    <!-- Navegação -->
     <nav>
-      <ul class="menu">
+      <ul class="menu" id="menu">
         <li><a href="#inicio">Início</a></li>
         <li><a href="#funcionalidades">Funcionalidades</a></li>
         <li><a href="#como-funciona">Como Funciona</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
+  
+    <!-- Botões de login -->
     <div class="auth-buttons">
       <a href="cliente-login.html"><button>Área do Cliente</button></a>
       <a href="admin-login.html"><button>Área do Petshop</button></a>
     </div>
   </header>
+  
 
   <section class="hero" id="inicio">
     <div class="container">
